--- a/TradutorGoogleAPI/pom.xml
+++ b/TradutorGoogleAPI/pom.xml
@@ -30,5 +30,10 @@
   		<artifactId>spring-webmvc</artifactId>
   		<version>5.1.5.RELEASE</version>
   	</dependency>
+  	<dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1</version>
+</dependency>
   </dependencies>
 </project>
